# ProgettoLocalInvoker

ActixwebTrigger/: Cargo.toml  Dockerfile
ActixwebTrigger/examples/: getBody.rs  getMetrics.rs  getQuery.rs
ActixwebTrigger/src/: main.rs
ConfManager/: Dockerfile  app.js  package-lock.json  package.json  ruler.js
ConfManager/config/: rules.json
ConfManager/routes/: configurator.js  fn.js  index.js  scaler.js  trigger.js
ConfManager/views/: dashboard.jade  index.jade
LocalInvoker/: Cargo.toml
LocalInvoker/src/: main.rs
Stresser/: Cargo.toml  report.xml
Stresser/src/: main.rs
