[package]
name = "ActixwebTrigger"
version = "0.1.0"
authors = ["sabbio93 <sabbio93@local>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
async-nats = "0.9.7"
env_logger = "0.8.3"
reqwest = { version = "0.11.2", default-features = false, features = ["rustls-tls", "blocking", "json"] }
dashmap = "4.0.2"
serde= "1.0.125"
serde_json= "1.0.64"
log= "0.4.14"
actix-web-prom = "0.5.1"
nuid = "0.4.1"
