[package]
name = "LocalInvoker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-s3 = "0.27.0-rc4"
tokio = {version = "1.5.0", features = ["full"]}
rmp-serde = "1.0.0"
rmpv = "1.0.0"
serde = "*"
serde_derive = "*"
log = "0.4.14"
env_logger = "0.9.0"
nats = "0.20.0"
futures = "0.3"
[dependencies.rmp]
rmp = "^0.8"
